Limit the number of accelerated canvases that can exist in a render process

To avoid exhausting GPU resource limits, we limit the number of the
accelerated canvas count. Previously, we only limited based on memory
consumption, wich was not enough to prevent recurring GPU context resets.

BUG=620329

Review-Url: https://codereview.chromium.org/2069143002
Cr-Commit-Position: refs/heads/master@{#400190}

Former-commit-id: 316f13fd14e0e9206850c67fa04463b99de0abd8